# wingpanel-indicator-prime

./: README.md  meson.build
data/: meson.build
po/: LINGUAS  POTFILES  de.po  es.po  fr.po  it.po  meson.build  primeindicator.pot
src/: PrimeIndicator.vala  PrimeIndicator.vala~
